# RePORT-AI-Portal

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  Makefile  README.md  SECURITY.md  __version__.py  config.py  main.py  pyproject.toml
.github/workflows/: auto-version.yml  ci.yml  deploy-docs.yml  docs-quality-check.yml  skill_verify.yml
.streamlit/: config.toml
config/: config.yaml  study_knowledge.yaml
data/Indo-VAP/: 13_TxCompliance_policy.yaml  14_CaseControl_policy.yaml  18_NonConsent_policy.yaml  1A_ICScreening_policy.yaml  2A_ICBaseline_policy.yaml  2B_HCBaseline_policy.yaml  3_Specimen_Collection_policy.yaml  5_CBC_policy.yaml  7_Culture_policy.yaml  95_SAE_policy.yaml  97_Not_Collected_policy.yaml  98A_FOA_policy.yaml  99B_FSB_policy.yaml  study_concepts.yaml
deploy/nginx/: report-ai-portal-proxy-secret.conf.example  report-ai-portal.conf.example
deploy/systemd/: report-ai-portal-healthcheck.service.example  report-ai-portal-healthcheck.timer.example  report-ai-portal.env.example  report-ai-portal.service.example
docs/: plan_sot_afk_pipeline.md  plan_sot_stage_a_generation.md  plan_sot_stage_a_generation.trimmed.md  runbook_real_data_smoke.md  runbook_sot_build.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/irb_dossier/: conformance_matrix.md  executive_summary.md  phase3_phi_followups.md  phi_free_pdfs.template.md  phi_limited_dataset.template.md  phi_walkthrough.md
docs/sphinx/: audience_profiles.rst  conf.py  index.rst  release_notes.rst
scripts/: __init__.py  artifact_versions.py  lint_doc_freshness.py  lint_legacy_dirs.py
scripts/ai_assistant/: __init__.py  agent_graph.py  agent_prompts.py  agent_tools.py  analytical_engine.py  cli.py  file_access.py  keystore.py  ollama_config.py  phi_safe.py  sot_loader.py  study_knowledge.py  tool_cache.py  web_ui.py
scripts/audit/: __init__.py  ledger.py  zone_guards.py
scripts/extraction/: __init__.py  _dict_keys.py  build_variables_reference.py  cleanup_propagation.py  dataset_cleanup.py  dataset_pipeline.py  dedup.py  extract_pdf_data.py  load_dictionary.py  pdf_pipeline.py
scripts/security/: __init__.py  kanon_gate.py  llm_source_gate.py  phi_allowlist.py  phi_gate.py  phi_id_masker.py  phi_ner.py  phi_patterns.py  phi_redactor.py  phi_review.py  phi_scrub.py  phi_scrub.yaml  phi_sot_sweep.py  phi_sweep_emit.py  phi_sweep_verify.py  secure_env.py
scripts/skills/: __init__.py  extract_to_llm_source.py
scripts/source_truth/: __init__.py  all_form_validation.py  analysis_binding.py  build.py  builder.py  catalog.py  completeness.py  concept_derivation.py  concepts.py  cross_verify_emit.py  cross_verify_fix_agent.py  cross_verify_pipeline.py  cross_verify_scanner.py  cutover_gate.py  dataset_schema.py  dataset_schema_writer.py  dictionary_consolidator.py  diff_against_gold.py  distribution.py  epidemiology.py  evidence_pack_consolidator.py  evidence_pack_splitter.py  gate_checks.py  generate_lean_outputs.py  ledger_readers.py  ledgers.py  legacy_evidence_pack_reconciler.py  lineage.py  llm_source_catalogs.py  pdf_evidence.py  policy_loader.py  reconciliation.py  record.py  retrieval.py  sot_coverage_gate.py  sot_extractor_agent.py  sot_gap_dispatcher.py  sot_gap_inventory.py  sot_gap_merge.py  sot_reviewer_agent.py  (+2 more)
scripts/utils/: __init__.py  errors.py  evidence_pack_pruner.py  integrity.py  lineage.py  llm_capabilities.py  log_hygiene.py  log_safe.py  logging_system.py  pre_delete_cleanup.py  pre_delete_cleanup_cli.py  process_role.py  read_deny.py  restore_drill.py  run_context.py  secure_staging.py  smart-commit.sh  snapshots.py  step_cache.py  telemetry.py
skills/dataset-to-llm-source/: SKILL.md
snapshots/: README.md
tests/: conftest.py  test_agent_conversational_guard.py  test_agent_graph.py  test_agent_tools.py  test_agent_tools_phi_safe.py  test_analysis_binding_cutover.py  test_analytical_engine.py  test_artifact_versions.py  test_auth_boundary.py  test_build_variables_reference.py  test_catalog_runtime_cutover.py  test_chat_boundary.py  test_cleanup_propagation.py  test_cli.py  test_cohort_builder.py  test_config.py  test_dataset_cleanup.py  test_dataset_pipeline.py  test_dataset_schema.py  test_dedup.py  test_determinism.py  test_epidemiology_planning.py  test_errors.py  test_extract_pdf_data.py  test_file_access.py  test_file_discovery.py  test_file_io.py  test_hard_cutover_default.py  test_hard_cutover_validation_gate.py  test_jsonl_reader.py  test_lineage_manifest.py  test_lint_legacy_dirs.py  test_load_dictionary.py  test_log_hygiene.py  test_logging_system.py  test_main_helpers.py  test_model_downgrade_ladder.py  test_model_policy.py  test_pdf_phi_flag.py  test_phase5b_output_structure.py  (+29 more)
tests/ai_assistant/: test_file_access_audit_deny.py
tests/audit/: test_ledger.py  test_ledger_runtime_guard.py  test_process_role.py  test_sentinel.py  test_zone_guards.py
tests/extraction/: test_clinical_dates.py  test_dataset_header_detection.py  test_dictionary_output_path.py  test_forms_manifest.py
tests/parity/: test_legacy_vs_new_catalog_smoke.py
tests/security/: key_fixtures.py  test_adversarial_phi_safe.py  test_kanon_l_diversity.py  test_keystore.py  test_llm_capabilities.py  test_llm_construction_smoke.py  test_llm_source_gate.py  test_log_hygiene_keys.py  test_metadata_path_no_row_values.py  test_no_keys_in_parent_environ.py  test_no_static_api_key_literals.py  test_pdf_redaction_pipeline.py  test_phase2_pipeline_polish.py  test_phase2_polish_permissions.py  test_phi_id_masker.py  test_phi_redactor.py  test_phi_review.py  test_phi_sot_sweep.py  test_phi_sweep_emit.py  test_phi_sweep_verify.py  test_sandbox_isolation.py  test_static_analysis.py  test_study_intake_static.py
tests/skills/: test_ci_fixture_verify.py  test_dataset_to_llm_source_skill.py  test_extract_to_llm_source.py  test_extract_to_llm_source_cli.py  test_extract_to_llm_source_verify.py
tests/source_truth/: test_agent_sdk_wiring.py  test_build_coordinator.py  test_build_declared_ledgers.py  test_concept_derivation.py  test_concepts.py  (+35 more)
(+158 files in other folders)
