# ============================================================================
# RePORT AI Portal - Project Configuration (uv + hatchling)
# ============================================================================
# Package manager: uv
# Build backend: hatchling
# Python: 3.11+
#
# Installation:
#   uv sync                    # Install runtime dependencies
#   uv sync --group dev        # Include development dependencies
#   uv sync --group docs       # Include documentation dependencies
#   uv sync --all-groups       # Install everything
#
# Notes:
#   - `project.dependencies` defines published/runtime dependencies.
#   - `[dependency-groups]` defines local development groups for uv.
#   - `project.optional-dependencies` is omitted intentionally because the
#     current repository uses uv dependency groups instead of published extras.
# ============================================================================

[project]
name = "report_ai_portal"
dynamic = ["version"]
description = "RePORT AI Portal: Single-Study Privacy-First AI Assistant for Clinical Research Data"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Solomon S Joseph" }
]
maintainers = [
    { name = "Solomon S Joseph" }
]
keywords = [
    "clinical-research",
    "privacy-first",
    "ai_assistant",
    "llm",
    "nlp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
requires-python = ">=3.11"

# ============================================================================
# Core Dependencies
# ============================================================================
dependencies = [
    # -------------------------------------------------------------------------
    # Data Manipulation & Processing
    # -------------------------------------------------------------------------
    "pandas>=2.0.0,<2.4.0",
    "openpyxl>=3.1.0,<4.0.0",
    "numpy>=2.0.0,<3.0.0",
    # -------------------------------------------------------------------------
    # User Interface & CLI
    # -------------------------------------------------------------------------
    "tqdm>=4.66.0,<5.0.0",
    # -------------------------------------------------------------------------
    # Security & Encryption
    # -------------------------------------------------------------------------
    "cryptography>=41.0.0,<48.0.0",
    # -------------------------------------------------------------------------
    # PDF Processing
    # -------------------------------------------------------------------------
    "pypdf>=5.0.0,<7.0.0",
    "pdfplumber>=0.10.0,<1.0.0",
    "Pillow>=12.1.1,<13.0.0",
    # -------------------------------------------------------------------------
    # Utilities
    # -------------------------------------------------------------------------
    "tenacity>=8.2.0,<10.0.0",
    "scipy>=1.11.0,<2.0.0",
    "statsmodels>=0.14.0,<1.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "plotly>=5.18.0,<6.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/solomonsjoseph/RePORT-AI-Portal"
Documentation = "https://solomonsjoseph.github.io/RePORT-AI-Portal/"
Repository = "https://github.com/solomonsjoseph/RePORT-AI-Portal"
Issues = "https://github.com/solomonsjoseph/RePORT-AI-Portal/issues"

[project.scripts]
report_ai_portal = "main:main"

# ============================================================================
# UV Configuration
# ============================================================================

# ============================================================================
# Dependency Groups (uv native format)
# ============================================================================
[dependency-groups]
dev = [
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pytest>=7.0.0,<9.1.0",
    "ipython>=8.0.0,<9.0.0",
    "pip-audit>=2.7.0,<3.0.0",
    "fpdf2>=2.8.7,<3.0.0",
    "pandas-stubs>=2.0.0",
    "types-tqdm>=4.66.0",
    "types-pyyaml>=6.0.12.20260408",
]

docs = [
    "sphinx>=7.0.0,<9.0.0",
    "sphinx-rtd-theme>=1.3.0,<3.0.0",
    "sphinx-autodoc-typehints>=1.24.0,<3.0.0",
    "sphinx-autobuild>=2021.3.14,<2025.0.0",
    "myst-parser>=2.0.0,<3.0.0",
]

llm = [
    "anthropic>=0.49.0,<1.0.0",
    "google-genai>=1.0.0,<2.0.0",
]

ai_assistant = [
    "kaleido>=1.0.0,<2.0",
    # LangChain 1.x family bumped together for security: closes
    # langchain-openai GHSA-r7w7-9xr2-qq2r and langchain-text-splitters
    # GHSA-fv5p-p927-qmxr (April 2026 audit). Pinning <2.0 within the 1.x
    # line so future minor bumps are auto-allowed while major API changes
    # still go through review.
    # ``langchain`` (the meta-package) provides the ``langchain.chat_models``
    # router used by ``scripts.ai_assistant.agent_graph._build_llm`` to
    # instantiate any provider via ``init_chat_model``. Before PR #6 it
    # was pulled in transitively via ``langchain-community``; that dep was
    # removed in PR #6 and the live LLM flow broke (ModuleNotFoundError on
    # ``from langchain.chat_models import init_chat_model``). Pinned
    # explicitly here so the regression cannot recur.
    "langchain>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    # langchain-community removed — unused in our codebase, and its 1.x line
    # is still in alpha (pinning to 0.x would block langchain-core 1.x). If
    # a langchain-community import returns later, re-add explicitly.
    "langchain-openai>=1.1.14,<2.0.0",
    "langchain-anthropic>=1.0.0,<2.0.0",
    "langchain-google-genai>=3.0.0,<4.0.0",
    "langchain-ollama>=1.0.0,<2.0.0",
    "langchain-nvidia-ai-endpoints>=1.0.0,<2.0.0",
    "langchain-text-splitters>=1.1.2,<2.0.0",
    # LangGraph 1.x — closes CVE-2026-28277 (langgraph) and CVE-2026-27794
    # (langgraph-checkpoint, transitive). Runtime agent construction goes
    # through LangChain create_agent, but MemorySaver / CompiledStateGraph
    # still come from LangGraph.
    "langgraph>=1.0.10,<2.0.0",
    "langgraph-checkpoint>=4.0.0,<5.0.0",
]

web = [
    "streamlit>=1.38.0,<2.0.0",
]

profiling = [
    "memory-profiler>=0.61.0,<1.0.0",
    "line-profiler>=4.1.0,<5.0.0",
    "py-spy>=0.3.14,<1.0.0",
]

# ============================================================================
# Build System
# ============================================================================
[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "__version__.py"
pattern = '^__version__:\s*str\s*=\s*"(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
only-include = ["scripts", "config", "config.py", "main.py", "__version__.py"]

# ============================================================================
# Tool Configurations
# ============================================================================

# Ruff - Fast Python Linter
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "tmp",
    "output",
    "typings",
    "docs",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "N",      # pep8-naming
    "G",      # flake8-logging-format
    "PERF",   # Perflint
    "RUF",    # Ruff-specific rules
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B905",   # zip without explicit strict
    "N999",   # allow existing module naming like __version__
    "S104",   # local dev servers bind to all interfaces in Makefile/app docs
    "ARG001", # unused function argument
    "ARG002", # unused method argument (interface/ABC compliance)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**" = ["S101"]     # assert is idiomatic in pytest test files

[tool.ruff.lint.isort]
known-first-party = ["scripts", "config"]

# MyPy - Static Type Checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for existing codebase
ignore_missing_imports = true
exclude = [
    "models/",
    "cache/",
    "output/",
    "docs/",
]

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

# Pyright - Static Type Checking (VS Code / LSP default)
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
stubPath = "typings"
exclude = [
    "models/",
    "cache/",
    "output/",
    "docs/",
]
# Packages that lack inline types or stubs on PyPI:
reportMissingTypeStubs = false
reportMissingModuleSource = false
